<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cadastro de Usuario</string>
    <string name="action_settings">Settings</string>

    <!-- Descrição dos botões Main -->
    <string name="incluir">Incluir</string>
    <string name="alterar">Alterar</string>
    <string name="selecionar">Selecionar</string>

    <!-- Descrição de Label e Botao Inserir -->
    <string name="title_activity_insere_usuario">Inserir Usuário</string>
    <string name="usuario">User:</string>
    <string name="senha">Password:</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="limpar">Limpar</string>
    <string name="title_activity_altera_usuario">Alterar Usuário</string>
    <string name="status">Status:</string>
    <string name="ativo">Ativo</string>
    <string name="inativo">inativo:</string>
    <string name="title_activity_seleciona_usuario">SelecionaUsuarioActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="fechar">Sair</string>

</resources>
