<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="84dp"
        android:layout_height="146dp"
        android:layout_marginLeft="100dp"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/btnIncluir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/incluir" />

    <Button
        android:id="@+id/btnAlterar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alterar" />

    <Button
        android:id="@+id/btnSelecionar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selecionar" />

    <Button
        android:id="@+id/btnFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fechar" 
        />

</LinearLayout>