<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InsereUsuarioActivity" >

    <TextView
        android:id="@+id/txtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtTxtUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/txtSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtTxtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnIncluir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incluir" />

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limpar" />
    </LinearLayout>

</LinearLayout>